Compiler Bouw/compiler/test/basic/stephen/fail/order.cvc
// Should produce a tree validation error due to vardecs following statement.

export int main() {
    int a = 5;
    a = 6;
    int b = 7;
    return 0;
}
